--- a/index.html
+++ b/index.html
@@ -766,9 +766,9 @@ rxjs-5-to-6-migrate -p src/tsconfig.app.json</div>
                     <div class="instruction-item">
                         <strong>Une fois que vous et toutes vos dépendances ont été mises à jour vers RxJS 6, supprimez rxjs-compat.</strong>
                     </div>
-                    <div class="instruction-item">
-                        <strong>Mettez à jour vers la nouvelle version.</strong>
                     </div>
+                    <div class="version-header">Mettez à jour vers la nouvelle version.</div>
+                    <div class="version-content">
                     <div class="instruction-item">
                         <strong>Si vous utilisez le service worker Angular, migrez les fichiers versionnés vers le tableau de fichiers.</strong>
                     </div>
